Remove Monster Viewer header and div

--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <h1>Monster Viewer</h1>
-
-  <div id="monster"></div>
-
+  <div id="statblock"></div>
   <script src="script.js"></script>
 </body>
+
 </html>
