Update title to 'D&D 5e Stat Block'

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>D&D Monster</title>
+  <title>D&D 5e Stat Block</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <div id="statblock"></div>
+
   <script src="script.js"></script>
 </body>
-
 </html>
+
