--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <button id="showGoblin">Goblin</button>
+<button id="showSkeleton">Skeleton</button>
   <meta charset="UTF-8">
   <title>D&D 5e Stat Block</title>
   <link rel="stylesheet" href="style.css">
