Add monster selection dropdown to index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         placeholder="Search monsters..."
       />
       <ul id="monsterList"></ul>
+      <label for="monsterSelect">Select Monster:</label>
+<select id="monsterSelect">
+  <option value="">-- Choose a monster --</option>
+</select>
+
     </aside>
 
     <main id="statblock"></main>
