Add default option to monster select dropdown

--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 <body>
   <div class="layout">
     <aside class="sidebar">
-
-
-
       <label for="monsterSelect">Select Monster</label>
-      <select id="monsterSelect"></select>
-
-
-
+      <select id="monsterSelect">
+        <option value="">-- Choose a monster --</option>
+      </select>
     </aside>
 
     <main id="statblock"></main>
@@ -24,5 +20,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
