--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 
     <div id="typeCheckboxes"></div>
 
+    <div id="homebrewCheckboxDiv">
+      <label>
+        <input type="checkbox" id="homebrewCheckbox">
+        Homebrew
+      </label>
+    </div>
+
     <div id="ownCheckboxDiv">
       <label>
         <input type="checkbox" id="ownCheckbox">
@@ -58,6 +65,8 @@
       <button id="resetFiltersBtn">Reset Filters</button>
     </div>
   </div>
+
+  
 
   <!-- SPELL FILTERS (start hidden) -->
   <div id="spell-filters" style="display:none;">
