--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
   <meta charset="UTF-8">
   <title>D&D 5e Stat Block</title>
+
+  <!-- ===== RESPONSIVE VIEWPORT ===== -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <!-- ===== STYLES ===== -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- ===== OPTIONAL INLINE TOOLTIP STYLING ===== -->
   <style>
-    /* Optional: tooltip default styling */
     #tooltip {
       position: absolute;
       padding: 5px 10px;
@@ -24,6 +28,7 @@
     }
   </style>
 </head>
+
 <body>
 <div class="layout">
 
@@ -132,4 +137,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
