--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
   <button id="Monsterstats">Monsters</button>
   <button id="Spells">Spells</button>
-
+  <button id="Character">Character</button>
+  <button id="Rules">Rules</button>
   <!-- MONSTER FILTERS -->
   <div id="monster-filters">
     <label for="monsterSelect">Select Monster</label>
@@ -96,8 +97,21 @@
     <button id="resetSpellFiltersBtn">Reset Filters</button>
   </div>
 
-</aside>
 
+<div id="rules-filters" style="display:none">
+  <button id="dcRatingBtn">DC Rating</button>
+  <button id="conditionsBtn">Conditions</button>
+  <button id="damageBtn">Damage</button>
+  <button id="hpacBtn">HP/AC</button>
+  <button id="attackBtn">Attack</button>
+</div>
+
+<div id="character-filters" style="display:none;">
+  <button id="classesBtn">Classes</button>
+  <button id="characterBtn">Charactersheet</button>
+</div>
+
+</aside>
 
   <!-- MAIN STAT BLOCK -->
 <main id="statblock">
@@ -108,6 +122,8 @@
     <div id="statblock-content"></div>
   </div>
 
+
+
   <!-- SPELL STATBLOCK -->
   <div id="spell-statblock" style="display:none;">
   <div id="spell-header">
@@ -117,6 +133,10 @@
 
     <div id="spell-content"></div>
   </div>
+
+<div id="rules-statblock" style="display:none;"></div>
+<div id="character-statblock" style="display:none;"></div>
+
 
 </main>
 
@@ -134,8 +154,8 @@
 <!-- Tooltip container for conditions -->
 <div id="tooltip"></div>
 
-<script src="script.js"></script>
+<script type="module" src="js/main.js"></script>
+
 </body>
 </html>
-
 
