--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
 <div id="items-statblock" style="display:none;">
 </div>
 
+<div id="fluff-statblock" style="display:none;">
+</div>
+
 </main>
 
 
