--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   <!-- SIDEBAR -->
 <aside class="sidebar">
 
+  <button id="homeBtn">Home</button>
   <button id="Monsterstats">Monsters</button>
   <button id="Spells">Spells</button>
   <button id="Character">Character</button>
   <button id="Rules">Rules</button>
   <button id="Items">Items</button>
-  <button id="Fluff">Background</button>
+  <button id="Fluff">Lore</button>
 
   <div class="sidebar-divider"></div>
 
@@ -107,6 +108,7 @@
   <button id="damageBtn">Damage</button>
   <button id="hpacBtn">HP/AC</button>
   <button id="attackBtn">Attack</button>
+  <button id="monsterCreationBtn">Monster creation</button>
 </div>
 
 <div id="character-filters" style="display:none;">
@@ -139,16 +141,75 @@
   <!-- MAIN STAT BLOCK -->
 
 <!-- FRONT PAGE -->
-<div id="home-statblock">
-  <div class="home-text">
+<!-- FRONT PAGE -->
+<div id="home-statblock" class="intro">
+  <div class="intro-content">
     <h1>Welcome to my D&D page</h1>
-    <p>
-      Use the menu on the left to explore monsters, spells, characters, rules,
-      items, and the lore of Dungeons & Dragons.
-    </p>
-    <p>
-      Prepare your encounters, check monsters and spells, and let the story unfold.
-    </p>
+    <p>Use the menu on the left to explore monsters, spells, characters, rules, items, and the lore of Dungeons & Dragons.</p>
+    <p>Prepare your encounters, check monsters and spells, and let the story unfold.</p>
+  </div>
+</div>
+
+<!-- MONSTERS INTRO -->
+<div id="monsters-intro" class="intro">
+  <div class="intro-content">
+    <h2>Welcome to Monsters</h2>
+    <p>Browse monsters by type, CR, environment, and more.</p>
+    <ul>
+      <li>Filter by type, challenge rating, or source</li>
+      <li>Click on a monster to see its full stat block</li>
+      <li>Use the search to quickly find what you need</li>
+    </ul>
+  </div>
+</div>
+
+<!-- SPELLS INTRO -->
+<div id="spells-intro" class="intro">
+  <div class="intro-content">
+    <h2>Welcome to Spells</h2>
+    <p>Here you can browse all available spells and see their detailed effects.</p>
+    <ul>
+      <li>Filter by school, level, or class</li>
+      <li>Click on a spell to see its full stat block</li>
+      <li>Use the search to quickly find what you need</li>
+    </ul>
+  </div>
+</div>
+
+<!-- RULES INTRO -->
+<div id="rules-intro" class="intro">
+  <div class="intro-content">
+    <h2>Welcome to Rules</h2>
+    <p>Browse rules by DC, conditions, damage, HP/AC, and attacks.</p>
+    <ul>
+      <li>Filter by DC & abilities, conditions, damage, HP/AC, and attacks</li>
+      <li>Click on a rule to see its full details</li>
+      <li>Use the buttons to quickly find what you need</li>
+    </ul>
+  </div>
+</div>
+
+<!-- ITEMS INTRO -->
+<div id="items-intro" class="intro">
+  <div class="intro-content">
+    <h2>Welcome to Items</h2>
+    <p>Browse items by type, rarity, and more.</p>
+  </div>
+</div>
+
+<!-- FLUFF INTRO -->
+<div id="fluff-intro" class="intro">
+  <div class="intro-content">
+    <h2>Welcome to Lore</h2>
+    <p>Explore Dungeons & Dragons lore, stories, and background information.</p>
+  </div>
+</div>
+
+<!-- CHARACTERS INTRO -->
+<div id="characters-intro" class="intro">
+  <div class="intro-content">
+    <h2>Welcome to Characters</h2>
+    <p>Browse characters by class, race, background, and more.</p>
   </div>
 </div>
 
