--- a/index.html
+++ b/index.html
@@ -127,10 +127,9 @@
 </div>
 
 <div id="items-filters" style="display:none;">
-  <button id="itemsBtn">Items</button>
-  <button id="weaponsBtn">Weapons</button>
-  <button id="armorBtn">Armour</button>
-  <button id="magicalBtn">Magical Items</button>
+<button id="basicItemsBtn">Basic Items</button>
+<button id="itemsBtn">Items</button>
+
 </div>
 
 <div id="fluff-filters" style="display:none;">
