--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <div id="items-filters" style="display:none;">
 <button id="basicItemsBtn">Basic Items</button>
 <button id="itemsBtn">Items</button>
-
+<button id="magicalitemsBtn">Magical Items</button>
 </div>
 
 <div id="fluff-filters" style="display:none;">
