--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 </div>
 
 <div id="fluff-filters" style="display:none;">
+<button id="loreBtn">Lore</button>
+<button id="worldBtn">World</button>
+  </div>
 
 
 </aside>
@@ -244,6 +247,8 @@
 
 <div id="fluff-statblock" style="display:none;">
 </div>
+
+
 
 </main>
 
