--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
   <button id="classesBtn">Classes</button>
   <button id="characterBtn">Charactersheet</button>
   <button id="strainBtn">Cosmic Strain</button>
+    <button id="strain2Btn">Cosmic Strain v2</button>
   <button id="racesnBtn">Races</button>
   <button id="backgroundBtn">Character Backgrounds</button>
   <button id="featsBtn">Feats</button>
