--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     <div id="sourceCheckboxes"></div>
 </div>
 
+<div id="alignmentFilter">
+      <p>Filter by Alignment:</p>
+    <div id="alignmentCheckboxes"></div>
+</div>
 
     <div id="homebrewCheckboxDiv">
       <p>Filter by Homebrew:</p>
@@ -94,8 +98,13 @@
       </select>
     </div>
 
+          <p>Filter by School:</p>
     <div id="spellSchoolCheckboxes"></div>
 
+    <div id="spellsourceFilter">
+      <p>Filter by Source:</p>
+    <div id="spellsourceCheckboxes"></div>
+</div>
 
 
     <button id="resetSpellFiltersBtn">Reset Filters</button>
@@ -116,6 +125,7 @@
   <button id="characterBtn">Charactersheet</button>
   <button id="strainBtn">Cosmic Strain</button>
     <button id="strain2Btn">Cosmic Strain v2</button>
+        <button id="strain3Btn">Cosmic Strain v3</button>
   <button id="racesnBtn">Races</button>
   <button id="backgroundBtn">Character Backgrounds</button>
   <button id="featsBtn">Feats</button>
