--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </aside>
 
   <!-- MAIN STAT BLOCK -->
-
+  <div class="content-column"> 
 <!-- FRONT PAGE -->
 <!-- FRONT PAGE -->
 <div id="home-statblock" class="intro">
@@ -240,7 +240,6 @@
   <!-- SPELL STATBLOCK -->
   <div id="spell-statblock" style="display:none;">
   <div id="spell-header">
-    <button id="backToMonster" class="back-button">← Back to Monster</button>
   </div>
 
 
@@ -262,6 +261,7 @@
 
 
 </main>
+  </div>
 
 
   <!-- COMBAT TRACKER -->
