--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
 
   <!-- COMBAT TRACKER -->
   <aside class="combat-tracker">
+  <div class="tracker-header">
+    <button id="toggleCombatTracker" class="collapse-btn"></button>
+    <h2>Combat Tracker</h2>
+  </div>
     <h2>Combat Tracker</h2>
     <button id="addGroup">+ Add Monster Group</button>
     <button id="resetCombat">Reset Combat</button>
