--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- ===== OPTIONAL INLINE TOOLTIP STYLING ===== -->
 
-
+</head>
 <body>
 <div class="layout">
 
@@ -155,11 +155,13 @@
   <div class="content-column"> 
 <!-- FRONT PAGE -->
 <!-- FRONT PAGE -->
+
+<main id="statblock">
 <div id="home-statblock" class="intro">
   <div class="intro-content">
     <h1>Welcome to my D&D page</h1>
     <p>Use the menu on the left to explore monsters, spells, characters, rules, items, and the lore of Dungeons & Dragons.</p>
-    <p>Prepare your encounters, check monsters and spells, and let the story unfold.</p>
+    <p>On the right hand side you can track monsters during combat. Select your monster, change the amount and track HP and conditions for every monster.</p>
   </div>
 </div>
 
@@ -169,7 +171,7 @@
     <h2>Welcome to Monsters</h2>
     <p>Browse monsters by type, CR, environment, and more.</p>
     <ul>
-      <li>Filter by type, challenge rating, or source</li>
+      <li>Filter by type, challenge rating, alignment, and/or source</li>
       <li>Click on a monster to see its full stat block</li>
       <li>Use the search to quickly find what you need</li>
     </ul>
@@ -182,7 +184,7 @@
     <h2>Welcome to Spells</h2>
     <p>Here you can browse all available spells and see their detailed effects.</p>
     <ul>
-      <li>Filter by school, level, or class</li>
+      <li>Filter by school, level, source and/or class</li>
       <li>Click on a spell to see its full stat block</li>
       <li>Use the search to quickly find what you need</li>
     </ul>
@@ -227,7 +229,6 @@
 </div>
 
 
-<main id="statblock">
 
   <!-- MONSTER STATBLOCK -->
   <div id="monster-statblock">
