--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <button id="Spells">Spells</button>
   <button id="Character">Character</button>
   <button id="Rules">Rules</button>
-  <button id="Items">Items</button>
+  <button id="Items">Items, Treasure and Loot</button>
   <button id="Fluff">Lore</button>
 
   <div class="sidebar-divider"></div>
@@ -141,6 +141,7 @@
 <button id="basicItemsBtn">Basic Items</button>
 <button id="itemsBtn">Items</button>
 <button id="magicalitemsBtn">Magical Items</button>
+<button id="lootBtn">Loot tables</button>
 </div>
 
 <div id="fluff-filters" style="display:none;">
