--- a/index.html
+++ b/index.html
@@ -141,7 +141,13 @@
 <button id="basicItemsBtn">Basic Items</button>
 <button id="itemsBtn">Items</button>
 <button id="magicalitemsBtn">Magical Items</button>
-<button id="lootBtn">Loot tables</button>
+<button id="treasureBtn">Currency & Random Treasure</button>
+<button id="gemsBtn">Random Gems</button>
+<button id="artBtn">Random Art</button>
+<button id="arcanaBtn">Random Magical Arcana Items</button>
+<button id="armamentsBtn">Random Magical Armaments Items</button>
+<button id="implementsBtn">Random Magical Implements Items</button>
+<button id="relicsBtn">Random Magical Relics Items</button>
 </div>
 
 <div id="fluff-filters" style="display:none;">
