--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <label for="tableSelect">Select Table</label>
     <select id="tableSelect"></select>
 
-    <input type="text" id="nameFilter" placeholder="Search by name">
+    <input type="text" id="tablenameFilter" placeholder="Search by name">
 
     <div id="tablesourceFilter">
       <p>Filter by Source:</p>
