--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
       <p>Filter by Source:</p>
     <div id="tablesourceCheckboxes"></div>
     </div>
+
+        <div id="tableCategoryFilter">
+      <p>Filter by Category:</p>
+    <div id="tableCategoryCheckboxes"></div>
+    </div>
+
+        <div id="tableSubcategoryFilter">
+      <p>Filter by Subcategory:</p>
+    <div id="tableSubcategoryCheckboxes"></div>
+    </div>
+    
+
+
+
         <button id="resetTablesFiltersBtn">Reset Filters</button>
 </div>
 
@@ -317,5 +331,4 @@
 <script type="module" src="js/main.js"></script>
 
 </body>
-
 </html>
